update inter-agent communication

--- a/notebooks/ThrillerGameAgent.ipynb
+++ b/notebooks/ThrillerGameAgent.ipynb
@@ -71,30 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "3a09efc8-601a-4f3b-9d35-0898ba86e86b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
-    "nest_asyncio.apply()"
+    "nest_asyncio.apply()\n",
+    "import asyncio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "13babd0b-c38c-4b09-9531-b6f85e2dff52",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1933658839.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[15], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    global GAME_STORY = \"\"\"\u001b[0m\n\u001b[1;37m                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The basic plot and story of the game.\n",
     "GAME_STORY = \"\"\"\n",
@@ -149,6 +141,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b437218e-fb53-457b-a0ac-12047aab618c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Log the current details of the game.\n",
+    "RESEARCH_LOG = \"\"\"\n",
+    "Research log starts here:\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "id": "6b80d90c-9b8b-4e25-825a-2a9913c55fc2",
    "metadata": {},
@@ -174,6 +180,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9790e935-1c8a-483a-b321-f1819ff5a0d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to update the research log\n",
+    "@function_tool\n",
+    "async def update_research_log(new_entry):\n",
+    "    global RESEARCH_LOG\n",
+    "    RESEARCH_LOG += f\"\\n{new_entry}\\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "id": "bcce7dde-94f4-431c-aef1-9a93bcca03c2",
    "metadata": {},
@@ -195,23 +215,70 @@
    "source": [
     "# Function to remove an item from the player's inventory\n",
     "@function_tool\n",
-    "async def remove_player_item(new_entry):\n",
+    "async def remove_player_item(item_name):\n",
     "    global PLAYER_ITEMS\n",
-    "    for item in PLAYER_ITEMS:\n",
-    "        if item == item:\n",
-    "            PLAYER_ITEMS.remove(item)\n",
-    "            return"
+    "    if item in PLAYER_ITEMS:\n",
+    "        PLAYER_ITEMS.remove(item)\n",
+    "        return f\"{item_name} removed.\"\n",
+    "    return f\"{item_name} not found in inventory.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "aecf353d-8bf8-4e6a-82e5-c43411805d42",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import agent libraries\n",
     "from agents import Agent, Runner, function_tool, FileSearchTool, WebSearchTool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "138b6d47-1259-4465-b2d8-f8bba72b23a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the Web Research Agent narrator\n",
+    "web_research_agent = Agent(name=\"Web Research Agent\",\n",
+    "                instructions=f\"\"\"\n",
+    "                You are a research agent that supports the Thriller Narrator Agent.\n",
+    "                The Narrator Agent does not have access to the internet, but sometimes requires outside information to support its narrator role.\n",
+    "                You expertly fulfill this narrative support role by giving the narrator agent accurate and succinct answers to its questions.\n",
+    "                Save all research queries and results to the {RESEARCH_LOG}\"\"\",\n",
+    "                model=\"gpt-4o\",\n",
+    "                tools=[WebSearchTool(),update_research_log]\n",
+    "                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86de89b4-95b0-4971-9a2c-5cd2b52666dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = Runner.run(web_research_agent, \"Is it raining in France today?\")\n",
+    "print(result.final_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b555710c-9575-41ea-8497-1c8c1d23ac0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@function_tool\n",
+    "async def query_web_research_agent(query: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Allows the narrator agent to query the Web Research Agent for factual information.\n",
+    "    This tool is only for the narrator's use — the player should never see it being called.\n",
+    "    \"\"\"\n",
+    "    response = await web_research_agent.arun(query)\n",
+    "    return response"
    ]
   },
   {
@@ -223,10 +290,22 @@
    "source": [
     "# Create the Thriller Narrator Agent narrator\n",
     "narrator_agent = Agent(name=\"Thriller Narrator Agent\",\n",
-    "                instructions=f\"You are the narrator and game master for a text-based thriller set in the near future. The player will make decisions and interact with this world through simple text commands. Your job is to describe scenes, characters, tension, and consequences clearly, and guide the player through this interactive experience. The game world is described here: \\n\\n{GAME_STORY}. Current game details can be found here: \\n\\n{GAME_LOG}. The player has access to the following items: \\n\\n{PLAYER_ITEMS}\",\n",
+    "                instructions=f\"\"\"\n",
+    "                You are the narrator and game master for a text-based thriller set in the near future.\n",
+    "                The player will make decisions and interact with this world through simple text commands.\n",
+    "                Your job is to describe scenes, characters, tension, and consequences clearly, and guide the player through this interactive experience.\n",
+    "                The game world is described here: \\n\\n{GAME_STORY}.\n",
+    "                Current game details can be found here: \\n\\n{GAME_LOG}.\n",
+    "                The player has access to the following items: \\n\\n{PLAYER_ITEMS}\n",
+    "                \"\"\",\n",
     "                model=\"gpt-4o\",\n",
-    "                tools=[update_game_log, add_player_item, remove_player_item]\n",
-    "                )"
+    "                tools=[\n",
+    "                    update_game_log,\n",
+    "                    add_player_item,\n",
+    "                    remove_player_item,\n",
+    "                    query_web_research_agent\n",
+    "                ]\n",
+    "            )"
    ]
   },
   {
@@ -299,120 +378,6 @@
     "await remove_player_item(\"toothpick\")\n",
     "print(GAME_LOG)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "138b6d47-1259-4465-b2d8-f8bba72b23a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the Web Research Agent narrator\n",
-    "web_research_agent = Agent(name=\"Web Research Agent\",\n",
-    "                instructions=\"You are a research agent that supports the Thriller Narrator Agent. The Narrator Agent does not have access to the internet, but sometimes requires outside information to support its narrator role. You expertly fulfill this narrative support role by giving the narrator agent accurate and succinct answers to its questions.\",\n",
-    "                model=\"gpt-4o\",\n",
-    "                tools=[WebSearchTool()]\n",
-    "                )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "86b4bc64-5dd4-4987-81c3-e7adf5b6a39c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting langchain-community\n",
-      "  Downloading langchain_community-0.3.27-py3-none-any.whl.metadata (2.9 kB)\n",
-      "Requirement already satisfied: langchain-core<1.0.0,>=0.3.66 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-community) (0.3.71)\n",
-      "Requirement already satisfied: langchain<1.0.0,>=0.3.26 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-community) (0.3.26)\n",
-      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-community) (2.0.34)\n",
-      "Requirement already satisfied: requests<3,>=2 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-community) (2.32.3)\n",
-      "Requirement already satisfied: PyYAML>=5.3 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-community) (6.0.1)\n",
-      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-community) (3.10.5)\n",
-      "Requirement already satisfied: tenacity!=8.4.0,<10,>=8.1.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-community) (8.2.3)\n",
-      "Collecting dataclasses-json<0.7,>=0.5.7 (from langchain-community)\n",
-      "  Downloading dataclasses_json-0.6.7-py3-none-any.whl.metadata (25 kB)\n",
-      "Requirement already satisfied: pydantic-settings<3.0.0,>=2.4.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-community) (2.6.1)\n",
-      "Requirement already satisfied: langsmith>=0.1.125 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-community) (0.4.8)\n",
-      "Requirement already satisfied: httpx-sse<1.0.0,>=0.4.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-community) (0.4.1)\n",
-      "Requirement already satisfied: numpy>=1.26.2 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-community) (1.26.4)\n",
-      "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (2.4.0)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.2.0)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (23.1.0)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.4.0)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (6.0.4)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.11.0)\n",
-      "Collecting marshmallow<4.0.0,>=3.18.0 (from dataclasses-json<0.7,>=0.5.7->langchain-community)\n",
-      "  Downloading marshmallow-3.26.1-py3-none-any.whl.metadata (7.3 kB)\n",
-      "Collecting typing-inspect<1,>=0.4.0 (from dataclasses-json<0.7,>=0.5.7->langchain-community)\n",
-      "  Downloading typing_inspect-0.9.0-py3-none-any.whl.metadata (1.5 kB)\n",
-      "Requirement already satisfied: langchain-text-splitters<1.0.0,>=0.3.8 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain<1.0.0,>=0.3.26->langchain-community) (0.3.8)\n",
-      "Requirement already satisfied: pydantic<3.0.0,>=2.7.4 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain<1.0.0,>=0.3.26->langchain-community) (2.11.7)\n",
-      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.66->langchain-community) (1.33)\n",
-      "Requirement already satisfied: typing-extensions>=4.7 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.66->langchain-community) (4.14.1)\n",
-      "Requirement already satisfied: packaging>=23.2 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.66->langchain-community) (24.1)\n",
-      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langsmith>=0.1.125->langchain-community) (0.27.0)\n",
-      "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langsmith>=0.1.125->langchain-community) (3.11.0)\n",
-      "Requirement already satisfied: requests-toolbelt<2.0.0,>=1.0.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langsmith>=0.1.125->langchain-community) (1.0.0)\n",
-      "Requirement already satisfied: zstandard<0.24.0,>=0.23.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from langsmith>=0.1.125->langchain-community) (0.23.0)\n",
-      "Requirement already satisfied: python-dotenv>=0.21.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from pydantic-settings<3.0.0,>=2.4.0->langchain-community) (0.21.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from requests<3,>=2->langchain-community) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from requests<3,>=2->langchain-community) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from requests<3,>=2->langchain-community) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from requests<3,>=2->langchain-community) (2025.7.14)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from SQLAlchemy<3,>=1.4->langchain-community) (3.0.1)\n",
-      "Requirement already satisfied: anyio in c:\\users\\swall\\anaconda3\\lib\\site-packages (from httpx<1,>=0.23.0->langsmith>=0.1.125->langchain-community) (4.9.0)\n",
-      "Requirement already satisfied: httpcore==1.* in c:\\users\\swall\\anaconda3\\lib\\site-packages (from httpx<1,>=0.23.0->langsmith>=0.1.125->langchain-community) (1.0.2)\n",
-      "Requirement already satisfied: sniffio in c:\\users\\swall\\anaconda3\\lib\\site-packages (from httpx<1,>=0.23.0->langsmith>=0.1.125->langchain-community) (1.3.0)\n",
-      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->langsmith>=0.1.125->langchain-community) (0.14.0)\n",
-      "Requirement already satisfied: jsonpointer>=1.9 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from jsonpatch<2.0,>=1.33->langchain-core<1.0.0,>=0.3.66->langchain-community) (2.1)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain<1.0.0,>=0.3.26->langchain-community) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.33.2 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain<1.0.0,>=0.3.26->langchain-community) (2.33.2)\n",
-      "Requirement already satisfied: typing-inspection>=0.4.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain<1.0.0,>=0.3.26->langchain-community) (0.4.1)\n",
-      "Requirement already satisfied: mypy-extensions>=0.3.0 in c:\\users\\swall\\anaconda3\\lib\\site-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain-community) (1.0.0)\n",
-      "Downloading langchain_community-0.3.27-py3-none-any.whl (2.5 MB)\n",
-      "   ---------------------------------------- 0.0/2.5 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 2.5/2.5 MB 48.3 MB/s eta 0:00:00\n",
-      "Downloading dataclasses_json-0.6.7-py3-none-any.whl (28 kB)\n",
-      "Downloading marshmallow-3.26.1-py3-none-any.whl (50 kB)\n",
-      "Downloading typing_inspect-0.9.0-py3-none-any.whl (8.8 kB)\n",
-      "Installing collected packages: typing-inspect, marshmallow, dataclasses-json, langchain-community\n",
-      "Successfully installed dataclasses-json-0.6.7 langchain-community-0.3.27 marshmallow-3.26.1 typing-inspect-0.9.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Setup LangGraph so the two agents can communicate with each other\n",
-    "!pip -q install langgraph\n",
-    "!pip -q install langchain\n",
-    "!pip -q install langchain-community"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "77cbc6be-7ca0-4cec-9f87-d6bce50b638d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the lang graph libraries\n",
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.agents import AgentExecutor, create_openai_functions_agent\n",
-    "from langchain.tools import Tool\n",
-    "from langgraph.graph import StateGraph, END"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b89c34fa-2195-43bd-ad31-bf93aa89aca9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
